@@ -1,10 +1,12 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:grok="http://namespaces.zope.org/grok"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:plone="http://namespaces.plone.org/plone"
+    xmlns:theme="http://namespaces.zope.org/plonetheme.onegov"
     i18n_domain="seantis.dir.base">
 
     <i18n:registerTranslations directory="locales" />
@@ -36,6 +38,12 @@
     <browser:resourceDirectory
         name="seantis.dir.base.stylesheets"
         directory="css"/>
+
+    <configure zcml:condition="installed plonetheme.onegov">
+        <include package="plonetheme.onegov" />
+        <theme:add_scss path="scss/directory.scss" />
+    </configure>
+
 
     <browser:resourceDirectory
         name="seantis.dir.base.images"
