@@ -1,0 +1,280 @@
+/* @group seantis.dir.* directories */
+
+/* @group token input (categories) */
+@for $i from 1 through 4 {
+    #formfield-form-widgets-IDirectoryCategorized-cat#{$i} {
+        width: 100%;
+    }
+}
+
+/* @end */
+
+/* @group all directory views */
+.seantis-directory-all {
+
+    /* search box styles */
+    #directorySearch {
+        background-color: $lightgray;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+
+     /* directory result columns */
+    #directoryResultList,
+    #directoryResultMap {
+        @include boxsizing(border-box);
+        float: left;
+        width: 50%;
+    }
+
+    @media screen and (max-width: $screen-tablet-landscape) {
+        #directoryResultList,
+        #directoryResultMap {
+            float: none;
+            width: 100%;
+        }
+    }
+
+    /*
+    hide kml download in the events directory,
+    until we can change the output of it to use the icon font
+    */
+    ul li#document-action-kml_download {
+        display: none;
+    }
+
+    /* collective geo map */
+    #directoryResultMap, #default-cgmap {
+        height: $map-height;
+    }
+}
+
+/* @group all directory result views */
+.seantis-directory-results
+{
+    /* intro styles */
+    #landingPageText {
+        h2 {
+            padding-left: 1.6em;
+        }
+
+        div {
+            padding-left: 2em;
+            padding-bottom: 1em;
+        }
+
+        #landingPageImage {
+            float: left;
+            margin-bottom: 1em;
+            margin-right: 1em;
+        }
+    }
+
+    /* directory results */
+    #directoryResultList .directoryInfoText {
+        padding-left: 2em;
+    }
+
+    /* map markers */
+    .directoryResult {
+        position: relative;
+    }
+
+    .directoryMarker {
+        position: absolute;
+    }
+}
+/* @end */
+
+/* @group all directory item views */
+.seantis-directory-item #content
+{
+    #directoryResultList .directoryInfoText {
+        padding-left: 0;
+    }
+
+    ul {
+        margin-left: 1em;
+        margin-bottom: 1em;
+    }
+
+    .no-bullets {
+        list-style: none;
+        margin-left: 0;
+    }
+}
+/* @end */
+
+/* @group roadworks directory */
+.portaltype-seantis-dir-roadworks-directory,
+.portaltype-seantis-dir-roadworks-item {
+    #directoryInfo {
+        margin-top: 1em;
+    }
+
+    .directoryResult {
+        margin-bottom: 1.5em;
+    }
+}
+/* @end */
+
+/* @group contacts directory */
+.portaltype-seantis-dir-contacts-directory,
+.portaltype-seantis-dir-contacts-item {
+    #directoryInfo {
+        margin-top: 1em;
+    }
+
+    .directoryResult {
+        margin-bottom: 1.5em;
+        padding: 0;
+    }
+
+    .directoryTypes {
+        @include tag();
+        float: none;
+        display: inline-block;
+    }
+
+    .directoryDates ul {
+        padding-left: 0;
+    }
+
+    #directoryInfoPage ul {
+        padding-left: 0;
+    }
+
+    .directoryDates ul li,
+    #directoryInfoPage ul li {
+        margin-bottom: 0;
+    }
+}
+/* @end */
+
+/* @group council directory & item */
+.portaltype-seantis-dir-council-item,
+.portaltype-seantis-dir-council-directory {
+
+    /* council tags */
+    .council-tags h3 {
+        margin-bottom: 0.5em;
+        font-size: $font-size;
+        font-weight: normal;
+        color: $text-color-light;
+        border-bottom: 1px solid $lightgray2;
+    }
+
+    .council-tag-value {
+        font-weight: bold;
+    }
+
+    .council-tag-pointer {
+        display: none;
+    }
+
+}
+
+/* @group council directory */
+.portaltype-seantis-dir-council-directory {
+    /* result list columns */
+    .council-tags {
+        float: right;
+        width: 40%;
+    }
+
+    @media screen and (max-width: $screen-tablet-landscape) {
+        .council-tags {
+            float: none;
+            width: 100%;
+        }
+    }
+
+    /* results list display */
+    .directoryResult {
+        padding-top: 1.5em;
+        padding-left: 1em;
+        clear: both;
+    }
+
+    #directoryResultList .directoryInfoText {
+        padding-left: 0;
+    }
+
+    /* emphasize the council members' names */
+    .directoryInfoText > a {
+        font-weight: bold;
+        display: block;
+        margin-bottom: 0.5em;
+    }
+
+    /* create some space between address and tags */
+    .item-address {
+        margin-bottom: 0.5em;
+    }
+
+    .directory-tags a {
+        @include tag();
+        font-size: 90%;
+    }
+
+    /* position the image differently */
+    #landingPageImage {
+        margin: 0 0 1em 1em;
+    }
+}
+/* @end */
+
+/* @group council item */
+.portaltype-seantis-dir-council-item {
+
+    /* item view columns */
+    .directoryInfoImage,
+    .council-address {
+        float: left;
+    }
+
+    .council-tags {
+        float: right;
+        width: 40%;
+        margin-top: -1.5em;
+    }
+
+    @media screen and (max-width: $screen-tablet-landscape) {
+        .directoryInfoImage,
+        .council-address,
+        .council-tags {
+            float: none;
+        }
+    }
+
+    .directoryInfoImage {
+        margin-right: 2em;
+    }
+
+    .council-address {
+        max-width: 50%;
+    }
+
+    /* the address should look normal */
+    .council-address ul {
+        list-style: none;
+        padding-left: 0;
+    }
+
+    .council-address ul li {
+        margin-bottom: 0;
+    }
+
+    .council-information {
+        margin-top: 1em;
+    }
+
+    .full-resolution-portrait {
+        margin-top: 1em;
+    }
+
+}
+
+/* @end */
+
+/* @end */
